[project]
name = "devpulse-mcp"
version = "0.1.0"
description = "DevPulse MCP Server - Activity Intelligence for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
devpulse-mcp = "server:mcp.run"
